@@ -1,3 +1,7 @@
+2009-12-09  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-insert-directory): Suppress error messages.
+
 2009-12-07  Michael Albinus  <michael.albinus@gmx.de>
 
 	Handle prompt rules of ksh in OpenBSD 4.5.  Reported by Raphaël
